[gd_scene load_steps=15 format=3 uid="uid://ddlw7c7miwahg"]

[ext_resource type="Texture2D" uid="uid://d3e4jmm7ewihh" path="res://Assets/counter.png" id="1_74h4k"]
[ext_resource type="Script" path="res://Player/Player_Container.gd" id="2_j0cab"]
[ext_resource type="PackedScene" uid="uid://b46qffeqp6o56" path="res://Player/Player.tscn" id="3_xu7x2"]
[ext_resource type="TileSet" uid="uid://cldb111ilunqm" path="res://levels/kitchen_tileset.tres" id="4_2a11s"]
[ext_resource type="Texture2D" uid="uid://dcw72f44ui4gj" path="res://Assets/coin.png" id="5_m6cqp"]
[ext_resource type="PackedScene" uid="uid://bnn1778ivm1t5" path="res://levels/Camera.tscn" id="5_umxfj"]
[ext_resource type="PackedScene" uid="uid://byv3rfijce50c" path="res://UI/Pause_menu.tscn" id="6_5sk0o"]
[ext_resource type="Script" path="res://levels/Coin.gd" id="6_i1e7f"]
[ext_resource type="Script" path="res://levels/Exit.gd" id="7_7j1i6"]
[ext_resource type="Texture2D" uid="uid://bre62aqb4m4n4" path="res://Assets/ball.png" id="8_4yr28"]
[ext_resource type="PackedScene" uid="uid://bk4a8v6mhwwm2" path="res://UI/HUD.tscn" id="9_qpr6b"]
[ext_resource type="PackedScene" uid="uid://bgpg0dcyp8xfs" path="res://Enemies/JellySlime.tscn" id="10_celdp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gr1ec"]
texture = ExtResource("5_m6cqp")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-68.75, -68.75, 68.75, -68.75, 68.75, 68.75, -68.75, 68.75)

[sub_resource type="TileSet" id="TileSet_7bolh"]
tile_size = Vector2i(50, 50)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 8
sources/0 = SubResource("TileSetAtlasSource_gr1ec")

[node name="Game" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_begin = Vector2(0, -900)
scroll_limit_end = Vector2(5000, 900)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(0.639216, 0.627451, 0.627451, 1)
offset_top = -648.0
offset_right = 1152.0
scale = Vector2(2, 2)
texture = ExtResource("1_74h4k")

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource("2_j0cab")

[node name="Player" parent="Player_Container" instance=ExtResource("3_xu7x2")]

[node name="Platform" type="TileMap" parent="."]
tile_set = ExtResource("4_2a11s")
cell_quadrant_size = 50
format = 2
layer_0/tile_data = PackedInt32Array(65536, 0, 3, 65537, 65536, 3, 65538, 131072, 3, 65539, 0, 3, 65540, 65536, 3, 65541, 131072, 3, 458759, 0, 3, 458760, 65536, 3, 458761, 131072, 3, 458762, 0, 3, 458763, 65536, 3, 458764, 131072, 3, 262157, 0, 2, 262158, 65536, 2, 262159, 131072, 2, 16, 0, 2, 17, 65536, 2, 18, 131072, 2, -262125, 0, 2, -262124, 65536, 2, -262123, 131072, 2, 262166, 0, 2, 262167, 65536, 2, 262168, 65536, 2, -524272, 0, 2, -524271, 65536, 2, -524270, 131072, 2, -458729, 65536, 2, -458728, 65536, 2, -458727, 65536, 2, -458726, 65536, 2, -458725, 65536, 2, -458724, 131072, 2, -458730, 0, 2, 262176, 131072, 3, 262177, 196608, 3, 262178, 262144, 3, -65512, 131072, 3, -65511, 196608, 3, -65510, 262144, 3, 589824, 65536, 2, 589825, 65536, 2, 589826, 65536, 2, 589827, 65536, 2, 589828, 65536, 2, 589829, 65536, 2, 589830, 65536, 2, 589831, 65536, 2, 589841, 65536, 2, 589842, 65536, 2, 589843, 65536, 2, 589844, 65536, 2, 589845, 65536, 2, 589846, 65536, 2, 589847, 65536, 2, 458777, 65536, 2, 458778, 65536, 2, 458779, 65536, 2, 458780, 65536, 2, 458781, 65536, 2, 458782, 65536, 2, 458783, 65536, 2, 458784, 65536, 2, 458785, 65536, 2, 458786, 65536, 2, 458787, 65536, 2, 458788, 65536, 2, 458789, 65536, 2, 458790, 65536, 2, 196646, 65536, 2, 196647, 65536, 2, 196648, 65536, 2, 196649, 65536, 2, -65505, 65536, 2, -65504, 65536, 2, -65503, 65536, 2, -65502, 65536, 2, -65501, 65536, 2, -65500, 65536, 2, -196601, 65536, 2, -196600, 65536, 2, -196599, 65536, 2, -196598, 65536, 2, -393205, 65536, 2, -393204, 65536, 2, -393203, 65536, 2, -393202, 65536, 2, 196625, 65536, 2, 196626, 65536, 2, 196627, 65536, 2, -131053, 65536, 2)

[node name="Coin" type="TileMap" parent="."]
scale = Vector2(0.3, 0.3)
tile_set = SubResource("TileSet_7bolh")
cell_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(65546, 0, 0, 65553, 0, 0, 524318, 0, 0, -655326, 0, 0, -1376216, 0, 0, -1376210, 0, 0, -458671, 0, 0, -458668, 0, 0, -458665, 0, 0, 58, 0, 0, -917436, 0, 0, 852047, 0, 0, -1507248, 0, 0, -1507244, 0, 0, -1507240, 0, 0, 655468, 0, 0, 589887, 0, 0)
script = ExtResource("6_i1e7f")

[node name="ForeGround" type="TileMap" parent="."]
format = 2

[node name="Camera" parent="." instance=ExtResource("5_umxfj")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("9_qpr6b")]

[node name="Pause_menu" parent="UI" instance=ExtResource("6_5sk0o")]
process_mode = 3
visible = false

[node name="Exc1" type="Area2D" parent="."]
script = ExtResource("7_7j1i6")

[node name="Sprite2D" type="Sprite2D" parent="Exc1"]
position = Vector2(1689, 148)
scale = Vector2(1.5, 2)
texture = ExtResource("8_4yr28")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Exc1"]
position = Vector2(1689, 148)
scale = Vector2(1.5, 2)
polygon = PackedVector2Array(10, -23.8, 10, -22.1, 21, -15.1, 21, -12.6, 25, -6.6, 25, 8, 23.1, 8, 15.1, 21, 12.5, 21, 5.5, 25, -5.6, 25, -21, 14, -21, 11.7, -24, 7.7, -24, -9, -22.1, -9, -14.1, -21, -11.3, -21, -6, -23.3, -6, -25, -3.7, -25)

[node name="Enemy_Container" type="Node2D" parent="."]

[node name="JellySlime" parent="Enemy_Container" instance=ExtResource("10_celdp")]
position = Vector2(470, 313)

[connection signal="body_entered" from="Exc1" to="Exc1" method="_on_body_entered"]
