[gd_scene load_steps=15 format=3 uid="uid://cilam4746jo8h"]

[ext_resource type="Texture2D" uid="uid://d3e4jmm7ewihh" path="res://Assets/counter.png" id="1_umcmc"]
[ext_resource type="Script" path="res://Player/Player_Container.gd" id="2_rqm43"]
[ext_resource type="PackedScene" uid="uid://b46qffeqp6o56" path="res://Player/Player.tscn" id="3_q466d"]
[ext_resource type="TileSet" uid="uid://devr5x2rcku8j" path="res://UI/kit_tileset.tres" id="4_q4v2g"]
[ext_resource type="PackedScene" uid="uid://c66o423frtuk0" path="res://UI/Coin.tscn" id="5_icm7f"]
[ext_resource type="PackedScene" uid="uid://bnn1778ivm1t5" path="res://levels/Camera.tscn" id="5_x7huy"]
[ext_resource type="PackedScene" uid="uid://byv3rfijce50c" path="res://UI/Pause_menu.tscn" id="6_qm2wd"]
[ext_resource type="Script" path="res://levels/Exit.gd" id="7_yj8do"]
[ext_resource type="Texture2D" uid="uid://bre62aqb4m4n4" path="res://Assets/ball.png" id="8_t5gsh"]
[ext_resource type="PackedScene" uid="uid://bk4a8v6mhwwm2" path="res://UI/HUD.tscn" id="9_6cexv"]
[ext_resource type="PackedScene" uid="uid://bgpg0dcyp8xfs" path="res://Enemies/JellySlime.tscn" id="9_tkd37"]
[ext_resource type="AudioStream" uid="uid://dndmhyoqcc487" path="res://Assets/Battle Lava - Woman Dreams Against Gravity.mp3" id="11_bjvkd"]
[ext_resource type="AudioStream" uid="uid://we83jyyrq8bc" path="res://Assets/265675__stereo-surgeon__synth-stab-1.wav" id="11_ius83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ecuc"]
size = Vector2(23, 38)

[node name="Game" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_begin = Vector2(500, -900)
scroll_limit_end = Vector2(5500, 900)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)

[node name="Background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(0.639216, 0.627451, 0.627451, 1)
offset_top = -648.0
offset_right = 1152.0
scale = Vector2(2, 2)
texture = ExtResource("1_umcmc")

[node name="Player_Container" type="Node2D" parent="."]
script = ExtResource("2_rqm43")

[node name="Player" parent="Player_Container" instance=ExtResource("3_q466d")]
position = Vector2(99, -2)

[node name="Platform" type="TileMap" parent="."]
tile_set = ExtResource("4_q4v2g")
cell_quadrant_size = 50
format = 2
layer_0/tile_data = PackedInt32Array(65537, 196609, 1, 65538, 262145, 1, 327684, 196609, 1, 327685, 262145, 1, 393249, 262145, 4, 393248, 262145, 4, 393250, 262145, 4, 393251, 262145, 4, 393247, 1, 4, 393252, 65537, 4, 458760, 196609, 1, 458761, 262145, 1, 393230, 262145, 2, 327695, 262145, 2, 262160, 262145, 2, 196625, 262145, 2, 393231, 1, 4, 327696, 1, 4, 262161, 1, 4, 327697, 1, 4, 393233, 1, 4, 393232, 1, 4, 458769, 1, 4, 458768, 1, 4, 458767, 1, 4, 458766, 1, 4, 458765, 262145, 2, 196627, 196609, 2, 196630, 196609, 2, 458770, 65537, 5, 458771, 65537, 5, 458772, 65537, 5, 458773, 65537, 5, 458774, 65537, 5, 458775, 65537, 4, 393239, 65537, 4, 327703, 65537, 4, 262167, 65537, 4, 196631, 65537, 4, 131095, 65537, 4, 65559, 65537, 4, 23, 65537, 4, -65513, 65537, 4, -131049, 65537, 4, -196585, 65537, 3, 196619, 196609, 1, 196620, 262145, 1, -65528, 196609, 1, -65527, 262145, 1, 524305, 65537, 4, 589841, 65537, 4, 655377, 65537, 4, 655376, 65537, 4, 655375, 65537, 4, 655374, 65537, 4, 655373, 65537, 4, 655372, 65537, 4, 589836, 65537, 4, 589835, 65537, 4, 589834, 65537, 4, 655370, 65537, 4, 655371, 65537, 4, 655369, 65537, 4, 655368, 65537, 4, 655367, 65537, 4, 655366, 65537, 4, 655363, 65537, 4, 589827, 65537, 4, 589826, 65537, 4, 589825, 65537, 4, 655361, 65537, 4, 655360, 65537, 4, 655362, 65537, 4, 589824, 65537, 4, 589830, 65537, 4, 589831, 65537, 4, 589832, 65537, 4, 589833, 65537, 4, 589837, 65537, 4, 589838, 65537, 4, 589839, 65537, 4, 589840, 65537, 4, 524304, 65537, 4, 524303, 65537, 4, 524302, 65537, 4, 524301, 65537, 4, 524300, 262145, 4, 524299, 262145, 4, 524298, 262145, 4, 524297, 262145, 4, 524296, 262145, 4, 524295, 262145, 4, 524294, 262145, 4, 524291, 262145, 4, 524290, 262145, 4, 524289, 262145, 4, 524288, 262145, 4, 720913, 65537, 4, 786449, 65537, 4, 786448, 65537, 4, 786447, 65537, 4, 720911, 65537, 4, 720910, 65537, 4, 720909, 65537, 4, 720908, 65537, 4, 720907, 65537, 4, 720906, 65537, 4, 720905, 65537, 4, 786441, 65537, 4, 786440, 65537, 4, 786439, 65537, 4, 786438, 65537, 4, 720899, 65537, 4, 720898, 65537, 4, 720897, 65537, 4, 720896, 65537, 4, 786432, 65537, 4, 786433, 65537, 4, 786434, 65537, 4, 786435, 65537, 4, 720902, 65537, 4, 720903, 65537, 4, 720904, 65537, 4, 786443, 65537, 4, 786442, 65537, 4, 786444, 65537, 4, 786445, 65537, 4, 786446, 65537, 4, 720912, 65537, 4, 786450, 65537, 4, 786451, 65537, 4, 720915, 65537, 4, 720916, 65537, 4, 786452, 65537, 4, 786453, 65537, 4, 786454, 65537, 4, 786455, 65537, 4, 786456, 65537, 4, 786457, 65537, 4, 786458, 65537, 4, 786459, 65537, 4, 786460, 65537, 4, 786461, 65537, 4, 786462, 65537, 4, 786463, 65537, 4, 786464, 65537, 4, 786465, 65537, 4, 720929, 65537, 4, 720928, 65537, 4, 655392, 65537, 4, 655391, 65537, 4, 655390, 65537, 4, 655389, 65537, 4, 655388, 65537, 4, 720924, 65537, 4, 720923, 65537, 4, 720922, 65537, 4, 720921, 65537, 4, 720920, 65537, 4, 720925, 65537, 4, 720926, 65537, 4, 720927, 65537, 4, 655387, 65537, 4, 655386, 65537, 4, 655385, 65537, 4, 655384, 65537, 4, 720919, 65537, 4, 720918, 65537, 4, 655382, 65537, 4, 655381, 65537, 4, 655380, 65537, 4, 720917, 65537, 4, 655379, 65537, 4, 655378, 65537, 4, 720914, 65537, 4, 589842, 65537, 4, 589843, 65537, 4, 589844, 65537, 4, 589845, 65537, 4, 589846, 65537, 4, 589847, 65537, 4, 655383, 65537, 4, 524311, 65537, 4, 524310, 65537, 4, 524309, 65537, 4, 524308, 65537, 4, 524307, 65537, 4, 524306, 65537, 4, 655393, 65537, 4, -327677, 196609, 1, -327676, 262145, 1, -262129, 1, 1, -262128, 65537, 1, -262127, 131073, 1, -524288, 1, 4, -524287, 1, 4, -524286, 1, 4, -524283, 1, 4, -524282, 1, 4, -524281, 1, 4, -524280, 1, 4, -524279, 1, 4, -524278, 1, 4, -524277, 1, 4, -524276, 1, 4, -524275, 1, 4, -524274, 1, 4, -524273, 1, 4, -524272, 1, 4, -524271, 1, 4, -524270, 1, 4, -524269, 1, 4, -524268, 1, 4, -524267, 1, 4, -524266, 1, 4, -524265, 1, 4, -458729, 1, 4, -393193, 1, 4, -327657, 1, 4, -131048, 1, 4, -131047, 1, 4, -131046, 1, 4, -131045, 1, 4, -131044, 1, 4, -131043, 1, 4, -131042, 1, 4, -131041, 1, 4, -131040, 1, 4, -131039, 1, 4, -131038, 1, 4, -131037, 1, 4, -131036, 1, 4, -65500, 1, 4, 36, 1, 4, 65572, 1, 4, 131108, 1, 4, 196644, 1, 4, 262180, 1, 4, 327716, 1, 4, -131033, 1, 4, -65497, 1, 4, 39, 1, 4, 65575, 1, 4, 131111, 1, 4, 196647, 1, 4, 262183, 1, 4, 327719, 1, 4, 393255, 1, 4, 458791, 1, 4, 524327, 1, 4, 589863, 1, 4, 655399, 1, 4, 655397, 1, 4, 720933, 1, 4, 786469, 1, 4, 786471, 1, 4, 720935, 1, 4, 655396, 1, 4, 720932, 1, 4, 720931, 1, 4, 786467, 1, 4, 786466, 1, 4, 720930, 1, 4, 655394, 1, 4, 655395, 1, 4, 786468, 1, 4, -196569, 1, 4, -262105, 1, 4, -327641, 1, 4, -393177, 1, 4, -458713, 1, 4, -524249, 1, 4, -589785, 1, 4, -655321, 1, 4, -196572, 1, 4, -262108, 1, 4, -327644, 1, 4, -393180, 1, 4, -458716, 1, 4, -524252, 1, 4, -589788, 1, 4, -655324, 1, 4, -655320, 1, 4, -589784, 1, 4, -524248, 1, 4, -458712, 1, 4, -524247, 1, 4, -589783, 1, 4, -655319, 1, 4, -458711, 1, 4, -393175, 1, 4, -393176, 1, 4, -327640, 1, 4, -327639, 1, 4, -262103, 1, 4, -262104, 1, 4, -196567, 1, 4, -196568, 1, 4, -131032, 1, 4, -131031, 1, 4, -65495, 1, 4, -65496, 1, 4, 40, 1, 4, 41, 1, 4, 65577, 1, 4, 131113, 1, 4, 196649, 1, 4, 262185, 1, 4, 196648, 1, 4, 131112, 1, 4, 65576, 1, 4, 262184, 1, 4, 327720, 1, 4, 393256, 1, 4, 327721, 1, 4, 393257, 1, 4, 458793, 1, 4, 458792, 1, 4, 524328, 1, 4, 589864, 1, 4, 655400, 1, 4, 589865, 1, 4, 524329, 1, 4, 655401, 1, 4, 720937, 1, 4, 720936, 1, 4, 786472, 1, 4, 786473, 1, 4, 786470, 131073, 4, 720934, 65537, 5, -589801, 1, 4, -655337, 1, 4, -720873, 1, 4, -589799, 262145, 4, -589798, 262145, 4, -458724, 262145, 4, -458723, 262145, 4, -327649, 262145, 4, -327648, 262145, 4, -786406, 196609, 2, -524256, 196609, 2, -655331, 196609, 2, -589824, 1, 4, -655360, 1, 4, -720896, 1, 4, -786432, 1, 4, -851968, 1, 4, -786433, 1, 4, -786434, 1, 4, -786435, 1, 4, -720899, 1, 4, -720898, 1, 4, -655362, 1, 4, -655361, 1, 4, -720897, 1, 4, -589825, 1, 4, -589826, 1, 4, -589827, 1, 4, -655363, 1, 4, -458755, 1, 4, -524291, 1, 4, -524290, 1, 4, -524289, 1, 4, -458753, 1, 4, -458754, 1, 4, -393219, 1, 4, -393218, 1, 4, -327682, 1, 4, -327681, 1, 4, -393217, 1, 4, -262145, 1, 4, -196609, 1, 4, -196610, 1, 4, -262146, 1, 4, -262147, 1, 4, -327683, 1, 4, -196611, 1, 4, -131075, 1, 4, -131074, 1, 4, -131073, 1, 4, -65537, 1, 4, -65538, 1, 4, -2, 1, 4, -1, 1, 4, 65534, 1, 4, -3, 1, 4, -65539, 1, 4, 65533, 1, 4, 131069, 1, 4, 131070, 1, 4, 131071, 1, 4, 65535, 1, 4, 196607, 1, 4, 262143, 1, 4, 196605, 1, 4, 196606, 1, 4, 327679, 1, 4, 262142, 1, 4, 262141, 1, 4, 327677, 1, 4, 393213, 1, 4, 393214, 1, 4, 327678, 1, 4, 458750, 1, 4, 458751, 1, 4, 393215, 1, 4, 524287, 1, 4, 589823, 1, 4, 655359, 1, 4, 720895, 1, 4, 786431, 1, 4, 851967, 1, 4, 851966, 1, 4, 851965, 1, 4, 786429, 1, 4, 720893, 1, 4, 655357, 1, 4, 589821, 1, 4, 524285, 1, 4, 524286, 1, 4, 458749, 1, 4, 720894, 1, 4, 786430, 1, 4, 655358, 1, 4, 589822, 1, 4, 786437, 65537, 5, 786436, 65537, 5)

[node name="Piggy_Bank" type="Node2D" parent="."]

[node name="Coin" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(229, 252)

[node name="Coin18" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(229, 252)

[node name="Coin2" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(179, -242)

[node name="Coin3" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(852, -202)

[node name="Coin4" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(577, 154)

[node name="Coin5" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(426, -43)

[node name="Coin6" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(1063, 136)

[node name="Coin7" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(86, -428)

[node name="Coin8" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(1073, -426)

[node name="Coin9" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(978, -431)

[node name="Coin10" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
visible = false
position = Vector2(981, -426)

[node name="Coin11" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(875, -427)

[node name="Coin12" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(776, -427)

[node name="Coin13" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(682, -429)

[node name="Coin14" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(583, -426)

[node name="Coin15" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(479, -427)

[node name="Coin16" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(379, -429)

[node name="Coin17" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(285, -434)

[node name="Coin19" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(2213, -421)

[node name="Coin20" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(2213, -530)

[node name="Coin21" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(2219, -89)

[node name="Coin22" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(2221, -218)

[node name="Coin23" parent="Piggy_Bank" instance=ExtResource("5_icm7f")]
position = Vector2(2213, -328)

[node name="ForeGround" type="TileMap" parent="."]
format = 2

[node name="Camera" parent="." instance=ExtResource("5_x7huy")]

[node name="Exc2" type="Area2D" parent="."]
position = Vector2(336, -200)
script = ExtResource("7_yj8do")

[node name="Sprite2D" type="Sprite2D" parent="Exc2"]
position = Vector2(1387, 310)
scale = Vector2(1.5, 2)
texture = ExtResource("8_t5gsh")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Exc2"]
position = Vector2(1383, 310)
scale = Vector2(1.5, 2)
polygon = PackedVector2Array(10, -23.8, 10, -22.1, 21, -15.1, 21, -12.6, 25, -6.6, 25, 8, 23.1, 8, 15.1, 21, 12.5, 21, 5.5, 25, -5.6, 25, -21, 14, -21, 11.7, -24, 7.7, -24, -9, -22.1, -9, -14.1, -21, -11.3, -21, -6, -23.3, -6, -25, -3.7, -25)

[node name="warp" type="AudioStreamPlayer" parent="Exc2"]
stream = ExtResource("11_ius83")

[node name="CanvasLayer" type="CanvasLayer" parent="Exc2"]

[node name="ColorRect" type="ColorRect" parent="Exc2/CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_right = 5000.0
offset_bottom = 5000.0
color = Color(0.737255, 0.313726, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Enemy_Container" type="Node2D" parent="."]
position = Vector2(13, -15)

[node name="JellySlime" parent="Enemy_Container" instance=ExtResource("9_tkd37")]
position = Vector2(470, 313)

[node name="JellySlime2" parent="Enemy_Container" instance=ExtResource("9_tkd37")]
position = Vector2(1017, -472)

[node name="JellySlime3" parent="Enemy_Container" instance=ExtResource("9_tkd37")]
position = Vector2(465, -41)

[node name="JellySlime4" parent="Enemy_Container" instance=ExtResource("9_tkd37")]
position = Vector2(954, 85)

[node name="JellySlime8" parent="Enemy_Container" instance=ExtResource("9_tkd37")]
position = Vector2(172, -416)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("9_6cexv")]
offset_left = 1.0
offset_right = 1.0

[node name="Pause_menu" parent="UI" instance=ExtResource("6_qm2wd")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_bjvkd")
volume_db = -5.0
autoplay = true

[node name="kill" type="CharacterBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill"]
position = Vector2(924.5, 372)
shape = SubResource("RectangleShape2D_1ecuc")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="kill"]
position = Vector2(1125, 372)
shape = SubResource("RectangleShape2D_1ecuc")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="kill"]
position = Vector2(1925, 572)
shape = SubResource("RectangleShape2D_1ecuc")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="kill"]
position = Vector2(1075, 372)
shape = SubResource("RectangleShape2D_1ecuc")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="kill"]
position = Vector2(1025, 372)
shape = SubResource("RectangleShape2D_1ecuc")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="kill"]
position = Vector2(225, 622)
shape = SubResource("RectangleShape2D_1ecuc")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="kill"]
position = Vector2(275, 622)
shape = SubResource("RectangleShape2D_1ecuc")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="kill"]
position = Vector2(975, 372)
shape = SubResource("RectangleShape2D_1ecuc")

[connection signal="body_entered" from="Exc2" to="Exc2" method="_on_body_entered"]
